# bookmark

./: .gitignore  pyproject.toml
account/: forms.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py
account/templates/: base.html
account/templates/account/: dashboard.html  edit.html  login.html  register.html
account/templates/registration/: logged_out.html  login.html  logout.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html
bookmarks/: settings.py  urls.py
images/: admin.py  forms.py  models.py  urls.py  views.py
images/migrations/: 0001_initial.py
images/static/js/: bookmarklet.js
images/templates/images/image/: create.html  detail.html  list.html  list_images.html
