[project]
name = "bookmarks"
version = "0.1.0"
description = ""
authors = [
    {name = "Ruairi O'Donohoe",email = "58832267+ruairiodonohoe@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "djhtml (>=3.0.8,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "social-auth-app-django (>=5.5.1,<6.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "werkzeug (>=3.1.3,<4.0.0)",
    "pyopenssl (>=25.1.0,<26.0.0)",
    "python-decouple (>=3.8,<4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
